# controllers/nodes.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/universalmacro/common/fault"
+	"github.com/universalmacro/common/utils"
 	"github.com/universalmacro/core/controllers/models"
 	"github.com/universalmacro/core/services"
 )
@@ -29,4 +30,16 @@ func (c *NodeController) CreateNode(ctx *gin.Context) {
 	ctx.ShouldBindJSON(&createNodeRequest)
 	node := c.NodeService.CreateNode(createNodeRequest.Name, createNodeRequest.Description)
 	ctx.JSON(http.StatusCreated, models.NodeConvertor(node))
+}
+
+func (c *NodeController) ListNode(ctx *gin.Context) {
+	admin := getAdmin(ctx)
+	if admin == nil {
+		fault.GinHandler(ctx, fault.ErrPermissionDenied)
+		return
+	}
+	index := ctx.Query("index")
+	limit := ctx.Query("limit")
+	nodeList := c.NodeService.ListNode(int64(utils.StringToUint(index)), int64(utils.StringToUint(limit)))
+	ctx.JSON(http.StatusOK, models.NodeListConvertor(nodeList))
 }
