# openapi.yml
@@ -105,7 +105,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AdminList'
+                $ref: '#/components/schemas/NodeList'
 components:
   schemas:
     CreateNodeRequest:
@@ -115,6 +115,18 @@ components:
           type: string
         description:
           type: string
+    NodeList:
+      type: object
+      required:
+        - items
+        - pagination
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/Node'
+        pagination:
+          $ref: '#/components/schemas/Pagination'
     Node:
       type: object
       required:
